--- a/table ui/index.html
+++ b/table ui/index.html
@@ -120,7 +120,7 @@
                   <th scope="col" data-key="currentScore" data-tooltip="Active ranking score (Good or core Ironman depending on the toggle).">Score</th>
                   <th scope="col" data-key="GP" data-tooltip="Games played last season stack; used to derive durability.">GP</th>
                   <th scope="col" data-key="MPG" data-tooltip="Minutes per game derived from total minutes and games played.">MPG</th>
-                  <th scope="col" data-key="ADP" data-tooltip="Yahoo average draft position for context.">ADP</th>
+                  <th scope="col" data-key="ADP" data-tooltip="Yahoo average draft position; shows N/A when unavailable.">ADP</th>
                   <th scope="col" data-key="actions" data-tooltip="Remove this player from the current view.">Actions</th>
                 </tr>
               </thead>
